@@ -15,8 +15,13 @@
 
         <ul>
 <li>[Feature] Amazon CloudFront Support (S3)</li>
-<li>[Feature] Cloud Files Support [<a href="http://trac.cyberduck.ch/ticket/2745">#2745</a>] (Mosso)</li>
+<li>[Feature] Cloud Files Support (Mosso) [<a href="http://trac.cyberduck.ch/ticket/2745">#2745</a>]</li>
 <li>[Feature] Pre-configured protocol settings for MobileMe iDisk (WebDAV)</li>
+<li>[Feature] Send arbitrary commands over SSH using the 'Send Command...' interface (SFTP) [<a href="http://trac.cyberduck.ch/ticket/3">#3</a>]
+<li>[Feature] Archive and unarchive files and folders (ZIP, TAR etc.) (SFTP) [<a href="http://trac.cyberduck.ch/ticket/2376">#2376</a>]
+<li>[Feature] Clickable URL fields
+<li>[Feature] Display distinguished icon per protocol for bookmarks
+<li>[Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [<a href="http://trac.cyberduck.ch/ticket/2571">#2571</a>]</li>
         </ul>
     </div>
 
